Prevent footnote backlinks from causing horizontal scroll on Safari

--- a/css/footnotes.css
+++ b/css/footnotes.css
@@ -15,5 +15,5 @@
 }
 
 .reversefootnote {
-  @apply no-underline !important;
+  @apply no-underline inline-block !important;
 }
